# modorganizer2-linux-installer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  install.sh  post-install.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  build-changelog.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-installer.yml  feature-game.yml  feature.yml  report-bug.yml  request-feature.yml  request-game.yml
.github/workflows/: build-artifact.yml  build-release.yml  build-test.yml  format-check.yml  issue-stale.yml  pages.yml  test-build.yml  titler.yml
configs/: arg_pass.yml  game_info.json  game_info.yml  nxm-handler.desktop  nxm_handler.desktop  plugin_info.json  plugin_info.yml  resource_info.json  resource_info.yml
configs/workarounds/: F4SEVR.ini  SFSE.ini  SKSEVR.ini  dxvk.conf
docker/: .dockerignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  gen_appinfo.py  validate.sh
docs/: Gemfile  _config.yml  index.md
docs/_includes/: head_custom.html  title.html
docs/contributing/: index.md
docs/faq/: index.md
docs/installation/: index.md
docs/installation-and-usage/: index.md
docs/troubleshooting/: index.md
docs/usage/: custom-games.md  index.md
gamesinfo/: fallout3_goty.sh  skyrimspecialedition.sh
src/mo2-lint/: __init__.py
src/nxm-handler/: __init__.py  find_heroic_install.py  handler.py  logger.py  modorganizer2-nxm-handler.desktop  (+2 more)
steam-redirector/: Makefile  main.c
step/: download_external_resources.sh  load_gameinfo.sh  select_game.sh
tests/: test_redirector_paths.py
workarounds/: mo2_beta.sh
(+73 files in other folders)
