[project]
name = "modorganizer2-linux-installer"
version = "7.0.0-rc5"
description = "An easy-to-use Mod Organizer 2 installer for Linux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.5.20",
    "click>=8.4.1",
    "dotenv>=0.9.9",
    "inquirerpy>=0.3.4",
    "loguru>=0.7.3",
    "patool>=4.0.5",
    "pre-commit>=4.6.0",
    "protontricks>=1.14.1",
    "psutil>=7.1.3",
    "pydantic>=2.13.4",
    "pyinstaller>=6.21.0",
    "pyinstaller-hooks-contrib>=2026.6",
    "pyyaml>=6.0.3",
    "ruff==0.15.17",
    "requests>=2.34.2",
    "send2trash>=2.0.0",
    "websockets>=15.0.1",
]
